# SuperCube

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  matrix.cpp  matrix.h  matrix_mul_neo.s  native_activity_impl.cpp  native_gl.h  native_gles.cpp  native_gles2.cpp  native_gles3.cpp  native_sles.cpp  pcm1.h  pcm2.h  supercube.cpp
app/src/main/cpp/android_app_glue/: android_native_app_glue.c
gradle/wrapper/: gradle-wrapper.properties
